@@ -1,3 +1,9 @@
+2013-01-15  Karl Berry  <karl@tug.org>
+
+	* fmtutil.sh (run_initex): save log file first,
+	even if the .fmt isn't built.  Tweak message wordings.
+	Report from tljack, 12 Jan 2013 14:35:16.
+
 2012-08-08  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* fmtutil*, tcfmgr*, texconfig*, texlinks*  (removed):
